# LookingGlass

./: CMakeLists.txt  ColorRamp.cpp  README.md  Visualixer.cpp  Visualixer.hpp  VisualixerGeometricObject.cpp  VisualixerGeometricObject.hpp  VisualixerSimulation.hpp  test.cpp
apps/: VisualixerMesh.hpp  VisualixerSimulation.cpp
apps/cloud/: CMakeLists.txt  VisualixerCloud.cpp  VisualixerCloud.hpp  cloud.cpp
apps/geometry2d/: CMakeLists.txt  geometry2d.cpp
apps/geometry3d/: CMakeLists.txt  bowling_pin.xml  bowling_pin_outline.xml  fano_ring_bar.xml  geometry3d.cpp  simple_cylinder.xml  simple_extrusion.xml  simple_pyramid.xml  simple_shear.xml  simple_sphere.xml  simple_sweep.xml  simple_tree.xml  toroidal_resonator.xml  twisting_pipe.xml
apps/mesh/: CMakeLists.txt  VisualixerMesh.cpp  meshview.cpp
apps/orthtree/: CMakeLists.txt  orthtree.cpp
include/: ColorRamp.hpp  DrawableBox.hpp  DrawableColor.hpp  DrawablePoint.hpp  OwnedColor.hpp  OwnedPoint.hpp  Visualizer.hpp
src/: ColorRamp.cpp  Visualizer.cpp
